* Fixes for newer autotools
git-svn-id: https://svn.code.sf.net/p/gmerlin/code/trunk/gmerlin_encoders@4172 214d8ac5-8513-4f59-80f8-2f39b674a24a

--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ AM_INIT_AUTOMAKE(gmerlin-encoders, 1.2.0)
 
 SAVE_CFLAGS=$CFLAGS
 AC_DISABLE_STATIC
+AC_LANG_SOURCE(C)
 AC_PROG_LIBTOOL
 
 CFLAGS=$SAVE_CFLAGS
