* More Ubuntu-14.04 fixes
git-svn-id: https://svn.code.sf.net/p/gmerlin/code/trunk/gmerlin_encoders@4214 214d8ac5-8513-4f59-80f8-2f39b674a24a

--- a/plugins/ffmpeg/Makefile.am
+++ b/plugins/ffmpeg/Makefile.am
@@ -1,6 +1,6 @@
 gmerlin_plugindir = @gmerlin_plugindir@
 
-INCLUDES = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 AM_LDFLAGS = @GMERLIN_PLUGIN_LDFLAGS@ -avoid-version -module
 AM_CFLAGS = @GMERLIN_DEP_CFLAGS@ @AVFORMAT_CFLAGS@ @AVCODEC_CFLAGS@ -DLOCALE_DIR=\"$(localedir)\"
