--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,4 @@ ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS= po lib include plugins m4 utils
 
-EXTRA_DIST = config.rpath  autogen.sh cvs_clean.sh gmerlin_encoders.spec.in cpuinfo.sh make_potfiles
+EXTRA_DIST = config.rpath  autogen.sh cvs_clean.sh gmerlin_encoders.spec.in make_potfiles
