--- a/plugins/ogg/Makefile.am
+++ b/plugins/ogg/Makefile.am
@@ -5,7 +5,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/include
 AM_LDFLAGS = @GMERLIN_PLUGIN_LDFLAGS@ -avoid-version -module
 
 if HAVE_THEORAENC
-theoraenc_plugins = e_theora.la c_theoraenc.la
+theoraenc_plugins = c_theoraenc.la
 theora_sources = theora.c
 
 if HAVE_SHOUT
@@ -46,7 +46,7 @@ opus_sources =
 endif
 
 if HAVE_FLAC
-flac_plugins = e_flacogg.la c_flacenc.la
+flac_plugins = c_flacenc.la
 flac_sources = flac.c
 bgflac_libs    = $(top_builddir)/lib/libbgflac.la @FLAC_LIBS@
 else
@@ -77,38 +77,6 @@ AM_CFLAGS = -DLOCALE_DIR=\"$(localedir)\"
 e_vorbis_la_CFLAGS = @VORBIS_CFLAGS@ $(AM_CFLAGS)
 e_vorbis_la_SOURCES = e_vorbis.c vorbis.c ogg_common.c
 e_vorbis_la_LIBADD = @GMERLIN_DEP_LIBS@ $(top_builddir)/lib/libgmerlin_encoders.la @VORBISENC_LIBS@ @VORBIS_LIBS@ 
-
-e_flacogg_la_CFLAGS = @OGG_CFLAGS@ @FLAC_CFLAGS@ $(AM_CFLAGS)
-e_flacogg_la_SOURCES = e_flacogg.c flac.c ogg_common.c
-e_flacogg_la_LIBADD = @GMERLIN_DEP_LIBS@ $(top_builddir)/lib/libgmerlin_encoders.la $(bgflac_libs) @OGG_LIBS@
-
-e_theora_la_CFLAGS = \
-@THEORAENC_CFLAGS@ \
-@VORBIS_CFLAGS@ \
-@SPEEX_CFLAGS@ \
-@FLAC_CFLAGS@ \
-@OPUS_CFLAGS@ \
-$(AM_CFLAGS)
-
-e_theora_la_SOURCES = \
-e_theora.c \
-vorbis.c \
-$(speex_sources) \
-$(flac_sources) \
-$(opus_sources) \
-theora.c \
-ogg_common.c
-
-e_theora_la_LIBADD = \
-@GMERLIN_DEP_LIBS@ \
-$(top_builddir)/lib/libgmerlin_encoders.la \
-@VORBISENC_LIBS@ \
-@VORBIS_LIBS@ \
-@THEORAENC_LIBS@ \
-@THEORADEC_LIBS@ \
-@SPEEX_LIBS@ \
-@OPUS_LIBS@ \
-$(bgflac_libs)
 
 e_oggvideo_la_CFLAGS = \
 @THEORAENC_CFLAGS@ \
